Added login on react frontend.